plugins {
    id("io.micronaut.minimal.application") version "4.6.1"
    id("com.gradleup.shadow") version "8.3.9"
}

version = "0.8.3"
group = "cat.complai"

repositories {
    mavenCentral()
}

dependencies {
    implementation("com.amazonaws:aws-lambda-java-events")
    implementation("io.micronaut:micronaut-http-client")
    // Micronaut JSON support via Jackson - provides JsonMapper bean
    implementation("io.micronaut:micronaut-jackson-databind")
    // micronaut-function-aws-api-proxy contains APIGatewayV2HTTPEventFunction,
    // which is the correct handler class for an HTTP API (API Gateway v2) + Lambda setup.
    // micronaut-aws-apigateway was the old REST/payload-1 module and does not contain this class.
    implementation("io.micronaut.aws:micronaut-function-aws-api-proxy")
    implementation("io.micronaut.aws:micronaut-function-aws")
    implementation("io.micronaut.cache:micronaut-cache-caffeine")
    implementation("io.micronaut.crac:micronaut-crac")
    runtimeOnly("ch.qos.logback:logback-classic")
    testRuntimeOnly("org.junit.platform:junit-platform-launcher")

    // PDF generation
    implementation("org.apache.pdfbox:pdfbox:2.0.29")

    // Lucene for in-memory search (Poor Man's RAG)
    implementation("org.apache.lucene:lucene-core:9.12.1")
    implementation("org.apache.lucene:lucene-queryparser:9.12.1")

    // Jsoup for HTML parsing
    implementation("org.jsoup:jsoup:1.17.2")
    // AWS SDK for S3 and SQS integration
    implementation("software.amazon.awssdk:s3:2.25.18")
    implementation("software.amazon.awssdk:sqs:2.25.18")

    // JWT validation — HS256 Bearer token support (JwtValidator, TokenGenerator)
    // jjwt-api is the compile-time dependency; impl and jackson are runtime-only.
    // jjwt-jackson bridges jjwt's claim serialisation to the Jackson 2.x already on the classpath.
    implementation("io.jsonwebtoken:jjwt-api:0.12.6")
    runtimeOnly("io.jsonwebtoken:jjwt-impl:0.12.6")
    runtimeOnly("io.jsonwebtoken:jjwt-jackson:0.12.6")
}


java {
    // Ensure Gradle compiles with Java 21 for both toolchain and source/target compatibility.
    // This makes the build deterministic and matches the Lambda runtime (JAVA_21).
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }

    sourceCompatibility = JavaVersion.VERSION_21
    targetCompatibility = JavaVersion.VERSION_21
}


micronaut {
    // "lambda_provided" is the correct runtime for API Gateway proxy handlers (APIGatewayV2HTTPEventFunction).
    // "lambda_provided" means the Lambda runtime is provided by AWS — no embedded HTTP server is started.
    runtime("lambda_provided")
    testRuntime("junit5")
    processing {
        incremental(true)
        annotations("cat.complai.*")
    }
}

application {
    mainClass.set("cat.complai.App" )
}


// CI test task: explicit task for the CI pipeline. It runs tests with JUnit Platform
// and is configured to fail the build if any test fails (Gradle default behaviour).
// Having this task makes the CI script intention-revealing and allows running
// tests independently of assembling the shadow JAR.

import org.gradle.api.tasks.testing.logging.TestExceptionFormat
import org.gradle.api.tasks.testing.logging.TestLogEvent

tasks.register('ciTest', Test) {
    description = 'Run unit tests for CI pipeline. Fails build on test failures.'
    group = 'verification'

    // Ensure we run the project's test classes with the test classpath
    testClassesDirs = sourceSets.test.output.classesDirs
    classpath = sourceSets.test.runtimeClasspath

    useJUnitPlatform()

    testLogging {
        events TestLogEvent.FAILED, TestLogEvent.SKIPPED, TestLogEvent.PASSED
        exceptionFormat = TestExceptionFormat.SHORT
        showExceptions = true
        showCauses = true
        showStackTraces = true
    }

    // Keep standard test task behaviour: don't continue build if tests fail.
}

tasks.named('shadowJar') {
    archiveFileName.set('complai-all.jar')
}
